--- a/requirements.txt
+++ b/requirements.txt
@@ -75,7 +75,7 @@ stack-data==0.6.3
 svgwrite==1.4.3
 sympy==1.13.1
 threadpoolctl==3.5.0
-torch==2.4.0+cpu
+torch==2.4.0
 torchaudio==2.4.0
 torchvision==0.19.0
 tornado==6.4.1
